@@ -1,3 +1,15 @@
+2010-02-22  Steve Block  <steveblock@google.com>
+
+        Reviewed by Simon Fraser.
+
+        Simplifies calculation of the transform in RenderLayer::paintLayer
+        https://bugs.webkit.org/show_bug.cgi?id=35101
+
+        No new tests, optimization only.
+
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::paintLayer):
+
 2010-02-22  Nicholas Young  <nicholas.young@nokia.com>
 
         Reviewed by Tor Arne Vestbø.
